src/features/binnacle/features/activity/ui/components/year-balance/year-balance-chart/year-balance-chart.module.css
.legend-container {
  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
  grid-template-rows: repeat(auto-fill, 100px);
  grid-row-gap: 0.5rem;
  grid-column-gap: 0.5rem;
  place-items: center;
  padding-bottom: 24px;
}

.legend-container * {
  user-select: text;
}

.chart-container {
  max-height: 75vh;
  display: grid;
  place-items: center stretch;
  margin: 1rem 0;
}

